<resources>
    <string name="app_name">Blind</string>

    <!--Home Fragment-->
    <string name="home_sort_popular">인기순 정렬</string>
    <string name="home_more_view_text">&lt;더보기&gt;</string>

    <!--Tab bar Menu-->
    <string name="main_home">home</string>
    <string name="main_search">search</string>
    <string name="main_write">write</string>
    <string name="main_bookmark">bookmark</string>
    <string name="main_my">my page</string>

    <!--Posting Activity-->
    <string name="posting_title_placeholder">제목을 입력해주세요.</string>
    <string name="posting_contents_placeholder">내용을 입력해주세요.</string>

    <!--Lounge Category-->
    <string name="lounge_developer">개발자</string>
    <string name="lounge_designer">디자이너</string>
    <string name="lounge_service">서비스</string>
    <string name="lounge_meroomong">메루몽</string>
    <string name="lounge_ted">테드</string>
    <string name="lounge_henry">헨리</string>

    <!--Notice Activity-->
    <string name="notice_title">NOTICE</string>
    <string name="notice_description">Check for new notifications.</string>
    <string name="notice_tab_my_post">My posts</string>
    <string name="notice_tab_other_post">Other posts</string>

</resources>
