<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.withever.blind.widget.TToolBar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:toolbar_style="back">

        </com.withever.blind.widget.TToolBar>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:paddingStart="@dimen/margin_large"
                android:paddingEnd="@dimen/margin_large"
                app:layout_constraintBottom_toTopOf="@id/noticeList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.withever.blind.widget.TTextView
                    android:id="@+id/textTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/notice_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_28"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/textDescriptions"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <com.withever.blind.widget.TTextView
                    android:id="@+id/textDescriptions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/notice_description"
                    app:layout_constraintBottom_toTopOf="@id/noticeCategoryTab"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitle" />

            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/noticeCategoryTab"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/ic_notice_tab_unselected"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDescriptions"
                    app:tabBackground="@drawable/selector_notice_tab"
                    app:tabIndicatorHeight="0dp"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextAppearance="@style/noticeTabLayoutTextAppearace">

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notice_tab_my_post" />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notice_tab_other_post" />

            </com.google.android.material.tabs.TabLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/border"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#E0E0E0"
                app:layout_constraintBottom_toTopOf="@id/noticeList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/noticeList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#E0E0E0"
                android:clipToPadding="false"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:paddingEnd="20dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>